--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@
 paginate:            2
 
 # Build settings
+url:                 https://blog.hannahsooah.com/
 markdown:            kramdown  # default Markdown renderer for Jekyll
 highlighter:         rouge  # default Ruby highlighter for Jekyll
 permalink:           /:title
