--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,5 +12,5 @@ social:
 pagination:
   next_page: 'newer'
   previous_page: 'older'
-  all posts: 'view more'
+  all_posts: 'view more'
 post_date_prefix: 'written on'
