[books] setup and init

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,7 @@
 menu:
 - {name: 'all posts',               url: 'all-posts'}
 - {name: 'about',              url: 'about'}
+- {name: 'books',              url: 'books'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
